# HANDWRITTENDIGITRECO

./: .dockerignore  .gitignore  .vercelignore  CHANGELOG.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  pyrightconfig.json  requirements.txt  vercel.json
.github/workflows/: ci.yml
.streamlit/: secrets.toml.example
api/: __init__.py  index.py  main.py  requirements.txt
app/: streamlit_app.py
examples/: README.md
notebooks/: exploration.ipynb
results/: metrics.json  training_metrics.json
scripts/: portfolio_demo.sh
src/: __init__.py  constants.py  data_loader.py  evaluate.py  model.py  predict.py  train.py  version.py
tests/: __init__.py  test_api.py  test_model.py
