[project]
name = "handwritten-digit-recognition"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.135.2",
    "python-multipart==0.0.22",
    "joblib==1.5.3",
    "numpy==2.4.3",
    "scikit-learn==1.8.0",
    "pillow==12.1.1",
    "opencv-python-headless==4.13.0.92",
    "mangum==0.19.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = ["notebooks"]

[tool.ruff.lint]
select = ["E", "F", "B"]
ignore = ["E501", "B008"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
check_untyped_defs = true
